--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
-	<p> This is the start of the login page! </p>
+	<h1> This is the start of the login page! </h1>
+	<p>Please enter your login details</p>
 	</body>
 </html>
