Made more progress on login.html

--- a/login.html
+++ b/login.html
@@ -1,5 +1,8 @@
 <html>
 	<body>
-	<p> This is the start of the login page! </p>
+		<h1>LOGIN HERE!</h1>
+		<h2>REGISTRATION IS CURRRENTLY OPEN!</h2>
+		<p>Enjoy ye olde experience on this 'ere page!</p>
+		<p> This is the start of the login page! </p>
 	</body>
 </html>
