:JB More login changes

--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 		<h1>LOGIN HERE!</h1>
 		<h2>REGISTRATION IS CURRRENTLY OPEN!</h2>
 		<p>Enjoy ye olde experience on this 'ere page!</p>
-		<p> This is the start of the login page! </p>
+		<p> I am not a fan of trying to actively create a merge conflict! </p>
+		<p> This has been a longer process than it probably needed to be.</P>
 	</body>
 </html>
