Added list for username and password

--- a/login.html
+++ b/login.html
@@ -2,5 +2,9 @@
 	<body>
 	<h1> This is the start of the login page! </h1>
 	<p>Please enter your login details</p>
+	<ul>
+		<li>username</li>
+		<li>password</li>
+	</ul>
 	</body>
 </html>
